<resources>
    <string name="app_name">TrashIssue</string>
    <string name="event_image">Event Image</string>
    <string name="haven_t_account_register_here">Haven\'t Account? Register Here!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginheader">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginmain">Login</string>
    <string name="trash_issue">Trash Issue</string>
    <string name="todo">TODO</string>
    <string name="for_greener_future">For Greener Future</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back Button</string>
    <string name="analyze">Analyze</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="already_have_account_login">Already Have Account? Login!</string>
    <string name="sign_up_sign_up">Sign Up</string>
    <string name="password_signup">Password</string>
    <string name="email_signup">Email</string>
    <string name="name_signup">Name</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="back_button_signup">Back Button</string>
    <string name="saran">Jika ada bug atau apapun, silakan hubungi nomor di atas!</string>
    <string name="nomor_developer">0895356352060</string>
    <string name="contact_support">Contact Support</string>
</resources>